# vagus

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md
.claude/: settings.json
.github/: pull_request_template.md
.github/actions/rust-setup/: action.yml
.github/workflows/: ci.yml  release.yml  warm-cache.yml
Formula/: vagus.rb
crates/vagus-plugin/: Cargo.toml
crates/vagus-plugin-protocol/: Cargo.toml
crates/vagus-plugin-protocol/src/: lib.rs
crates/vagus-plugin/src/: lib.rs
design/: README.md  guardrails.md  methodology-para.md  plan-advanced-search-three-tier.md  plan-two-tier-search-and-embedding-upgrade.md  prior-art.md  requirements.md  roadmap.md  tradeoffs.md
design/adr/: 0001-build-vs-adopt.md  0002-language-rust.md  0003-search-stack.md  0004-icloud-markdown-only.md  0005-assisted-filing.md  0006-embeddings-local-no-daemon.md  0007-lean-on-frankensearch.md  0008-naming.md  0009-cwd-scoped-search.md  0010-plugin-subcommands.md  0011-plugin-protocol.md  0012-three-tier-retrieval.md  0013-chunk-budget.md  0014-self-contained-universe.md  0015-cross-encoder-rerank.md  0016-local-generative-rewriter.md  0017-indexed-frontmatter-filters.md  0018-multi-agent-guardrails.md
docs/: plugin-contract.md
scripts/: git-guard.sh  render-formula.sh  worktree-janitor.sh
skills/: README.md
skills/create-note/: SKILL.md
skills/process-inbox/: SKILL.md
skills/search/: SKILL.md
src/: chunk.rs  config.rs  db.rs  embed.rs  index.rs  lex.rs  main.rs  notes.rs  plugin.rs  rerank.rs  rewrite.rs  scope.rs  search.rs  skills.rs  util.rs
