[package]
name = "vagus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
fastembed = "5.14.0"
pulldown-cmark = "0.13.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tantivy = "0.26.1"
walkdir = "2.5.0"
