[workspace]
members = ["crates/vagus-plugin-protocol", "crates/vagus-plugin"]
resolver = "2"

[package]
name = "vagus"
version = "0.4.0"
edition = "2024"
description = "Local-first PARA second brain: hybrid full-text + semantic search over a Markdown vault"
license = "MIT"
repository = "https://github.com/vasovagal/vagus"
readme = "README.md"
keywords = ["search", "notes", "second-brain", "para", "markdown"]
categories = ["command-line-utilities", "text-processing"]
# Ship only what's needed to build the binary; keep repo-meta (docs, design ADRs,
# Homebrew formula, CI) out of the crates.io tarball. `skills/` stays — it is
# embedded into the binary via include_str! in src/skills.rs.
exclude = [
    "design/",
    "docs/",
    "Formula/",
    "scripts/",
    ".github/",
    "CLAUDE.md",
    "RELEASING.md",
]

[features]
# `generate` ships the tier-1 local generative rewriter (candle + a Qwen3 GGUF). Default-on so
# `cargo install` / release binaries include it; build `--no-default-features` for a lean,
# candle-free binary (ADR 0016). The rewriter degrades gracefully when absent.
default = ["generate"]
generate = ["dep:candle-core", "dep:candle-transformers", "dep:hf-hub", "dep:tokenizers"]

[dependencies]
vagus-plugin-protocol = { path = "crates/vagus-plugin-protocol", version = "0.1.0" }
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
fastembed = "5.14.0"
pulldown-cmark = "0.13.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tantivy = "0.26.1"
terminal_size = "0.4"
walkdir = "2.5.0"
# tier-1 local generative rewriter (ADR 0016), behind the `generate` feature. CPU by default (no
# ort/onnxruntime conflict; self-contained binary preserved — G13); macOS additionally enables the
# Metal GPU backend below. hf-hub/tokenizers are pinned to fastembed's lines (0.5 / 0.22) so Cargo
# unifies them — do NOT bump to hf-hub 1.x.
candle-core = { version = "0.10.2", optional = true }
candle-transformers = { version = "0.10.2", optional = true }
# sync (ureq) backend only — avoid dragging in hf-hub's async tokio/reqwest extras (fastembed already
# pulls reqwest/native-tls via its own hf-hub feature; we don't need the async stack on top).
hf-hub = { version = "0.5", optional = true, default-features = false, features = ["ureq"] }
tokenizers = { version = "0.22", optional = true }

# macOS: enable candle's Metal backend so the quantized rewriter decodes on the Apple GPU instead of
# the CPU `gemm` (a large speedup for the autoregressive decode — ADR 0016). Cargo feature-unions this
# with the base candle deps above, so it only adds `metal` on macOS; the Linux release targets and the
# `--no-default-features` lean lane compile exactly as before. The binary stays self-contained —
# Metal.framework is a macOS system framework (ADR 0014/G13). Falls back to CPU at runtime if Metal
# can't initialize (see `rewrite::select_device`).
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.10.2", optional = true, features = ["metal"] }
candle-transformers = { version = "0.10.2", optional = true, features = ["metal"] }
