[package]
name = "vagus-plugin-protocol"
version = "0.1.0"
edition = "2024"
description = "Wire schema for the vagus plugin NDJSON contract (shared by vagus core and the vagus-plugin SDK)"
license = "MIT"
repository = "https://github.com/vasovagal/vagus"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
