[package]
name = "vagus-plugin"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for building vagus plugins (vagus-<name> binaries): event emitter, env accessors, vault-safe note writes"
license = "MIT"
repository = "https://github.com/vasovagal/vagus"

[dependencies]
vagus-plugin-protocol = { path = "../vagus-plugin-protocol", version = "0.1.0" }
serde_json = "1.0.150"
dirs = "6.0.0"
